[package]
name = "wok-dev"
description = "Placeholder package - please use git-wok instead"
version = "1.0.0-beta.4"
authors = ["Serge Matveenko <lig@countzero.co>"]
license = "MIT"
edition = "2024"
repository = "https://codeberg.org/wok/wok"

[[bin]]
name = "wok-dev"
path = "src/bin/wok_dev.rs"

[dependencies]
# No dependencies needed for placeholder
