[package]
name = "git-wok"
description = "A multirepo management tool."
version = "1.0.0"
authors = ["Serge Matveenko <lig@countzero.co>"]
license = "MIT"
edition = "2024"
documentation = "https://git-wok.dev/"
homepage = "https://git-wok.dev/"
repository = "https://codeberg.org/wok/wok"

[[bin]]
name = "wok"
path = "src/bin/git_wok.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.5"
git2 = "0.20.2"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.9.7"

[dev-dependencies]
assert_fs = "1.0.7"
pretty_assertions = "1.2.1"
rstest = "0.26.1"
shell-words = "1.1.0"
