[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wok-docs"
version = "1.0.0-beta.6"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wok_docs"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.2.4"
mdx-truly-sane-lists = "^1.3"
